tests/conformance/valid-module/source.vg
action main() -> Int:
  var x = 4
  var y = 2
  while y > 0:
    x := x + 1
    y := y - 1
  return x
