tests/conformance/type-error/source.vg
action main() -> Int:
  let count: Int = "oops"
  return count
